--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ I am skilled in HTML5, CSS3, JavaScript, PHP, Python, and MySQL, with certificat
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
+                        <i class="fa-solid fa-globe"></i>
+                        <div class="text">Web Development</div>
                         <p>Creating visually appealing and user-friendly websites.</p>
 
                     </div>
@@ -160,22 +160,22 @@ I am skilled in HTML5, CSS3, JavaScript, PHP, Python, and MySQL, with certificat
                 <div class="card">
                     <div class="box">
                         <i class="fa-solid fa-tablet-screen-button"></i>
-                        <div class="text">Apps Design</div>
+                        <div class="text">Apps Development</div>
                         <p>Designing intuitive and functional interfaces for mobile and web apps.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fa-solid fa-pen-nib"></i>
-                        <div class="text">Logo Design</div>
-                        <p>Creating memorable and impactful logos that represent the essence of brands.</p>
+                        <div class="text">WordPress</div>
+                        <p>Expert WordPress web development for fast, responsive, and custom websites.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">SMO</div>
-                        <p>Enhancing social media presence to boost engagement and drive traffic.</p>
+                        <div class="text">SEO</div>
+                        <p>Boosting website rankings and driving organic traffic with effective SEO strategies.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -218,7 +218,15 @@ I am skilled in HTML5, CSS3, JavaScript, PHP, Python, and MySQL, with certificat
                             <span class="bar"><span class="js"></span></span>
                         </li>
                         <li>
-                            <h3>PHP<span class="percentage" data-percentage="50">0%</span></h3>
+                            <h3>MySQL<span class="percentage" data-percentage="70">0%</span></h3>
+                            <span class="bar"><span class="mysql"></span></span>
+                        </li>
+                        <li>
+                            <h3>WordPress<span class="percentage" data-percentage="80">0%</span></h3>
+                            <span class="bar"><span class="wordpress"></span></span>
+                        </li>
+                        <li>
+                            <h3>PHP<span class="percentage" data-percentage="60">0%</span></h3>
                             <span class="bar"><span class="php"></span></span>
                         </li>
                     </div>
@@ -226,6 +234,34 @@ I am skilled in HTML5, CSS3, JavaScript, PHP, Python, and MySQL, with certificat
             </div>
         </div>
     </section>
+    <!-- stats -->
+    <section id="stats">
+        <div class="counter">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 2048 2048">
+                <rect width="2048" height="2048" fill="none" />
+                <path fill="var( --primary-color)" d="M1024 0q141 0 272 36t244 104t207 160t161 207t103 245t37 272q0 141-36 272t-104 244t-160 207t-207 161t-245 103t-272 37q-141 0-272-36t-244-104t-207-160t-161-207t-103-245t-37-272q0-141 36-272t104-244t160-207t207-161T752 37t272-37m603 685l-136-136l-659 659l-275-275l-136 136l411 411z" />
+            </svg>
+            <h3>Projects Completed</h3>
+            <span id="projects-counter">0</span>
+        </div>
+        <div class="counter">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 26 26">
+                <rect width="26" height="26" fill="none" />
+                <path fill="var( --primary-color)" d="M13 .188C5.924.188.187 5.923.187 13S5.925 25.813 13 25.813S25.813 20.076 25.813 13S20.075.187 13 .187zm0 2c5.962 0 10.813 4.85 10.813 10.812S18.962 23.813 13 23.813S2.187 18.962 2.187 13C2.188 7.038 7.038 2.187 13 2.187zM9 9a2 2 0 1 0 0 4a2 2 0 0 0 0-4m8 0a2 2 0 1 0 0 4a2 2 0 0 0 0-4M5.75 16.094a8.83 8.83 0 0 0 7.25 3.75a8.83 8.83 0 0 0 7.25-3.75A12.37 12.37 0 0 1 13 18.437c-2.707 0-5.208-.874-7.25-2.343" />
+            </svg>
+            <h3>Happy Clients</h3>
+            <span id="clients-counter">0</span>
+        </div>
+        <div class="counter">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24">
+                <rect width="24" height="24" fill="none" />
+                <path fill="var( --primary-color)" d="M22 13.478V18a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-4.522l.553.277a21 21 0 0 0 18.897-.002zM14 2a3 3 0 0 1 3 3v1h2a3 3 0 0 1 3 3v2.242l-1.447.724a19 19 0 0 1-16.726.186l-.647-.32l-1.18-.59V9a3 3 0 0 1 3-3h2V5a3 3 0 0 1 3-3zm-2 8a1 1 0 0 0-1 1a1 1 0 1 0 2 .01c0-.562-.448-1.01-1-1.01m2-6h-4a1 1 0 0 0-1 1v1h6V5a1 1 0 0 0-1-1" />
+            </svg>
+            <h3>Years of Experience</h3>
+            <span id="experience-counter">0</span>
+        </div>
+    </section>
+    
     <!-- featured project section start -->
     <section class="featured-projects" id="featured-projects">
         <div class="max-width">
